<resources>
    <string name="app_name">WanAndroid</string>

    <string name="star">我的积分</string>
    <string name="collect">我的收藏</string>
    <string name="share">我的分享</string>
    <string name="setting">设置</string>

    <string name="please_login">请登录</string>
    <string name="load_more">点击加载更多</string>

    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="qa">问答</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>

    <string name="unm">账号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>

    <string name="coin">积分</string>

    <string name="night_mode">暗色模式</string>
    <string name="header_img_id">头像账号</string>
</resources>