<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/g1"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_star"
            android:title="@string/star"
            android:icon="@drawable/ic_star"/>
        <item android:id="@+id/nav_collect"
            android:title="@string/collect"
            android:icon="@drawable/ic_favorite"/>
        <item android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/ic_share"/>
    </group>
    <group
        android:id="@+id/g2"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>